@@ -6,35 +6,33 @@
  */
 
 import { Fun, Optional } from '@ephox/katamari';
-import { Compare, Css, SugarElement, Traverse } from '@ephox/sugar';
+import { Css, SugarBody, SugarElement, Traverse } from '@ephox/sugar';
 import Editor from './api/Editor';
 
-const getProp = function (propName, elm) {
+const getProp = <K extends keyof Element>(propName: K, elm: SugarElement<Element>): Element[K] => {
   const rawElm = elm.dom;
   return rawElm[propName];
 };
 
-const getComputedSizeProp = function (propName, elm) {
-  return parseInt(Css.get(elm, propName), 10);
-};
+const getComputedSizeProp = (propName: string, elm: SugarElement<Element>): number =>
+  parseInt(Css.get(elm, propName), 10);
 
-const getClientWidth = Fun.curry(getProp, 'clientWidth');
-const getClientHeight = Fun.curry(getProp, 'clientHeight');
+const getClientWidth = Fun.curry(getProp, 'clientWidth' as 'clientWidth');
+const getClientHeight = Fun.curry(getProp, 'clientHeight' as 'clientHeight');
 const getMarginTop = Fun.curry(getComputedSizeProp, 'margin-top');
 const getMarginLeft = Fun.curry(getComputedSizeProp, 'margin-left');
 
-const getBoundingClientRect = function (elm) {
-  return elm.dom.getBoundingClientRect();
-};
+const getBoundingClientRect = (elm: SugarElement<Element>): ClientRect =>
+  elm.dom.getBoundingClientRect();
 
-const isInsideElementContentArea = function (bodyElm, clientX, clientY) {
+const isInsideElementContentArea = (bodyElm: SugarElement<Element>, clientX: number, clientY: number): boolean => {
   const clientWidth = getClientWidth(bodyElm);
   const clientHeight = getClientHeight(bodyElm);
 
   return clientX >= 0 && clientY >= 0 && clientX <= clientWidth && clientY <= clientHeight;
 };
 
-const transpose = function (inline, elm, clientX, clientY) {
+const transpose = (inline: boolean, elm: SugarElement<Element>, clientX: number, clientY: number): { x: number; y: number } => {
   const clientRect = getBoundingClientRect(elm);
   const deltaX = inline ? clientRect.left + elm.dom.clientLeft + getMarginLeft(elm) : 0;
   const deltaY = inline ? clientRect.top + elm.dom.clientTop + getMarginTop(elm) : 0;
@@ -45,7 +43,7 @@ const transpose = function (inline, elm, clientX, clientY) {
 };
 
 // Checks if the specified coordinate is within the visual content area excluding the scrollbars
-const isXYInContentArea = function (editor: Editor, clientX, clientY) {
+const isXYInContentArea = (editor: Editor, clientX: number, clientY: number): boolean => {
   const bodyElm = SugarElement.fromDom(editor.getBody());
   const targetElm = editor.inline ? bodyElm : Traverse.documentElement(bodyElm);
   const transposedPoint = transpose(editor.inline, targetElm, clientX, clientY);
@@ -53,16 +51,13 @@ const isXYInContentArea = function (editor: Editor, clientX, clientY) {
   return isInsideElementContentArea(targetElm, transposedPoint.x, transposedPoint.y);
 };
 
-const fromDomSafe = function (node) {
-  return Optional.from(node).map(SugarElement.fromDom);
-};
+const fromDomSafe = <T extends Node>(node: T | null): Optional<SugarElement<T>> =>
+  Optional.from(node).map(SugarElement.fromDom);
 
-const isEditorAttachedToDom = function (editor: Editor) {
+const isEditorAttachedToDom = (editor: Editor): boolean => {
   const rawContainer = editor.inline ? editor.getBody() : editor.getContentAreaContainer();
 
-  return fromDomSafe(rawContainer).map(function (container) {
-    return Compare.contains(Traverse.owner(container), container);
-  }).getOr(false);
+  return fromDomSafe(rawContainer).map(SugarBody.inBody).getOr(false);
 };
 
 export {
